@@ -12,6 +12,7 @@ mkdir ${dest}/html
 mkdir ${dest}/engines
 mkdir ${dest}/engines/gforth
 mkdir ${dest}/engines/bigforth
+mkdir ${dest}/engines/pfe
 
 cp AUTHORS COPYING NEWS README ChangeLog ${dest}
 cp     ffl/*.fs   ${dest}/ffl
@@ -20,6 +21,7 @@ cp    html/*.html ${dest}/html
 
 cp  engines/gforth/*.fs   ${dest}/engines/gforth
 cp  engines/bigforth/*.fs ${dest}/engines/bigforth
+cp  engines/pfe/*.fs      ${dest}/engines/pfe
 
 tar cvzf ${package}-${version}.tar.gz ${dest} 
 
